fix: A handful of issues identified by coderabbit